Create "new page" form

--- a/encyclopedia/static/encyclopedia/styles.css
+++ b/encyclopedia/static/encyclopedia/styles.css
@@ -36,3 +36,10 @@ textarea {
 .sidebar h2 {
     margin-top: 5px;
 }
+
+#page_title{
+    max-width: 20vw;
+    max-height: 10vh;
+    margin-top: 5px;
+
+}
