--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -16,10 +16,12 @@
                     <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
                 </form>
                 <div>
-                    <a href="{% url 'index' %}">Home</a>
+                    <a href="{% url 'encyclopedia:index' %}">Home</a>
                 </div>
                 <div>
-                    Create New Page
+                    <a href="{% url 'encyclopedia:new-page'%}">
+                        Create New Page
+                    </a>
                 </div>
                 <div>
                     Random Page
