--- a/encyclopedia/templates/encyclopedia/search_result.html
+++ b/encyclopedia/templates/encyclopedia/search_result.html
@@ -17,7 +17,7 @@
 {% else %}
 <h1>Not found</h1>
 <div class="alert pl-0" role="alert">
-    Could not found any entry with "{{searched}}".
+    Could not find any entry with "{{searched}}".
 </div>
 
 {% endif %}
