--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -24,7 +24,9 @@
                     </a>
                 </div>
                 <div>
-                    Random Page
+                    <a href="{% url 'encyclopedia:random-page'%}">
+                        Random Page
+                    </a>
                 </div>
                 {% block nav %}
                 {% endblock %}
