--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -5,25 +5,45 @@
 <html lang="en">
     <head>
         <title>{% block title %}{% endblock %}</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/6889402e51.js" crossorigin="anonymous"></script>        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'encyclopedia/styles.css' %}" rel="stylesheet">
     </head>
     <body>
+    <div class="container-fluid w-100 mx-0">
         <div class="row">
-            <div class="sidebar col-lg-2 col-md-3">
-                <h2>Wiki</h2>
-                <form type="get" action="search">
-                    <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
-                </form>
-                <div>
+            <!-- Sidebar -->
+            <div class="sidebar col-lg-2 col-md-3 px-0">
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col-12 p-0">
+                            <a href="{% url 'encyclopedia:index' %}">
+                                <img src="{% static 'encyclopedia/logo.png' %}" height="80vh" width="90vw"/>
+                            </a>        
+                        </div>
+                    </div>
+                </div>
+                <div class="container mt-3 px-2 mb-3">
+                    <div class="row height d-flex justify-content-center align-items-center">
+                        <div class="col-md-12">
+                            <div class="form">
+                                <form type="get" action="search">
+                                    <i class="fa fa-search"></i>
+                                    <input type="text" class="form-control form-input" name="q" placeholder="Search ...">
+                                </form> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            
+                <div class="sidebarlink">
                     <a href="{% url 'encyclopedia:index' %}">Home</a>
                 </div>
-                <div>
+                <div class="sidebarlink">
                     <a href="{% url 'encyclopedia:new-page'%}">
                         Create New Page
                     </a>
                 </div>
-                <div>
+                <div class="sidebarlink">
                     <a href="{% url 'encyclopedia:random-page'%}">
                         Random Page
                     </a>
@@ -31,11 +51,13 @@
                 {% block nav %}
                 {% endblock %}
             </div>
+            
+            <!-- Entry Page -->
             <div class="main col-lg-10 col-md-9">
                 {% block body %}
                 {% endblock %}
             </div>
         </div>
-
+    </div>
     </body>
 </html>
